# POVDisplay

./: .gitignore  CMakeLists.txt  LEDController.cpp  LEDController.hpp  LEDTest.cpp  LICENSE  hardware.cpp  hardware.h  ledControl.cpp  main.cpp  readme.md  spi.pio  videoFileReading.cpp  videoFileReading.h
docs/: fileFormat.md
pcb/: LED_Module.SchDoc  MCU.SchDoc  POVDisplay.BomDoc  POVDisplay.PrjPcb  Power.SchDoc  System.SchDoc
tools/videoEncoder/: go.mod  go.sum  main.go
tools/videoEncoder/ffmpeg/: ffmpeg.go
tools/videoEncoder/povEncoder/: encoding.go  renderFrame.go  storage.go
